fixed opposite logo being cutoff

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -118,9 +118,6 @@ img {
   padding-right: 0;
   padding-top: 0;
 }
-svg:not(:root) {
-  overflow: hidden;
-}
 code,
 kbd,
 pre,
